<resources>
    <string name="app_name">瑞能云</string>
    <string-array name="spinner_1">
        <item>全部区域</item>
        <item>A栋</item>
        <item>B栋</item>
    </string-array>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_0">0</string>
    <string name="text_01">北纬N22°32′43.86″\n东京E114°03′10.40″</string>
    <string name="text_02">0.91</string>
    <string name="text_03">元/kWh</string>
    <string name="text_04">18:00–23:59</string>
    <string name="text_05">20台</string>
    <string name="text_06">300kWh</string>
    <string name="text_07">全部0</string>
    <string name="text_08">运行中0</string>
    <string name="text_09">待机0</string>
    <string name="text_10">故障0</string>
    <string name="text_11">A栋大楼逆变器</string>
    <string name="text_12">50000W</string>
    <string name="text_13">26kWh</string>
    <string name="text_14">26001kWh</string>
    <string name="text_15">石岩A栋大楼</string>
    <string name="text_16">4565FAJOA791</string>
    <string name="text_17">2018–08–15</string>
    <string name="text_18">2018</string>
    <string name="text_19">16A</string>
    <string name="text_20">210V</string>
    <string name="text_21">26°</string>
    <string name="text_22">A栋</string>
    <string name="text_23">累计耗电：0kWh</string>
    <string name="text_24">7</string>
    <string name="text_25">30</string>
    <string name="text_26">石岩10KW</string>
    <string name="text_27">古瑞瓦特</string>
    <string name="text_28">中国</string>
    <string name="text_29">深圳</string>
    <string name="text_30">GMT+8</string>
    <string name="text_31">¥1.10</string>
    <string name="text_32">Lancelot</string>
    <string name="text_33">古瑞瓦特新能源股份有限公司</string>
    <string name="text_34">+</string>
    <string name="text_35">¥0.91/kWh</string>
    <string name="text_36">2018–07–13 17:33:20</string>
    <string name="text_37">1888888888</string>
    <string name="text_38">123456@123.com</string>
    <string name="text_39">kWh</string>
    <string name="text_40">7/1~7/31累计用电</string>
    <string name="text_41">7月10日</string>
    <string name="text_42">200h</string>
    <string name="text_43">1.0.0</string>
    <string name="text_44">20M</string>
    <string name="text_45">AD5697</string>
    <string name="text_46">鼓掌详情鼓掌详情鼓掌详情鼓掌详情</string>
    <string name="text_47">*</string>
    <string name="text_48">电表1(A栋)</string>
    <string name="text_49">电表2(B栋)</string>
    <string name="text_50">电表3(展厅)</string>
    <string name="text_51">电表4(停车场)</string>
    <string name="text_52">来自电池(10%)</string>
    <string name="text_53">来自电网(90%)</string>
    <string name="text_54">电表4(停车场)</string>
    <string name="text_55">自发自用</string>
    <string name="text_56">80%</string>
    <string name="text_57">光伏产出</string>
    <string name="text_58">来自光伏</string>
    <string name="text_59">PV功率：0.6W</string>
    <string name="text_60">放电功率：26W</string>
    <string name="text_61">电网功率：0.56W</string>
    <string name="text_62">用电功率：12.5W</string>
    <string name="text_63">¥</string>
    <string name="text_64">W</string>
    <string name="text_65">光伏功率</string>
    <string name="text_66">kg</string>
    <string name="text_67">28~30°晴</string>
    <string name="text_68">风速：东风6级</string>
    <string name="text_69">MWh</string>
    <string name="text_70">A栋大楼逆变器(CRA2714003)</string>
    <string name="text_71">#12电池箱</string>
    <string name="text_72">#1电池箱</string>
    <string name="text_73">#12电池箱</string>
    <string name="text_74">#1电池箱</string>
    <string name="text_75">#1电池组</string>
    <string name="load_power">负载功率</string>
    <string name="ele_net_power">电网功率</string>
    <string name="total">总</string>
    <string name="all">全部</string>
    <string name="back">返回</string>
    <string name="reg">注册</string>
    <string name="login">登录</string>
    <string name="over_view">总览</string>
    <string name="ele_gen">发电</string>
    <string name="energy_consume">能耗</string>
    <string name="consume_energy">耗能</string>
    <string name="ele_trend">电量趋势</string>
    <string name="ene_trend">能源趋势</string>
    <string name="zone_consume">分区消耗</string>
    <string name="real_time_data">实时数据</string>
    <string name="analyze">分析</string>
    <string name="sunny">晴</string>
    <string name="temperature">28°～30°</string>
    <string name="wind">东风6级</string>
    <string name="text_style_b">Bahnschrift</string>
    <string name="text_style_p">PingFang-SC-Regular</string>
    <string name="text_style_p_bold">PingFang-SC-Bold</string>
    <string name="add_device">添加设备</string>
    <string name="cur_device">当前设备</string>
    <string name="select_device_kind">请选择设备类型</string>
    <string name="air_conditioner">空调</string>
    <string name="air_conditioner_meeting">会议室空调</string>
    <string name="air_conditioner_num">空调数</string>
    <string name="illumination">照明</string>
    <string name="charge_station">充电桩</string>
    <string name="add_price">新增电价</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="add_time">添加</string>
    <string name="price_name">电价名称</string>
    <string name="price_classify">电价类型</string>
    <string name="from_battery">来自电池</string>
    <string name="input_price_name">请输入电价名称</string>
    <string name="input_price">请输入单价</string>
    <string name="price">单价</string>
    <string name="begin_time">开始时间</string>
    <string name="stop_time">结束时间</string>
    <string name="start_time">起始时间</string>
    <string name="time">时间</string>
    <string name="valid_time">有效时间</string>
    <string name="forever">永久有效</string>
    <string name="take_effect">是否生效</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="total_consume">总消耗</string>
    <string name="malfunction">故障</string>
    <string name="running_statement">运行状态</string>
    <string name="rate">功率</string>
    <string name="ele_gen_daily">当日发电</string>
    <string name="ele_gen_daily_">当日发电:0kWh</string>
    <string name="ele_gen_month">当月发电</string>
    <string name="ele_gen_total">总发电</string>
    <string name="ele_gen_cum">累计发电</string>
    <string name="location">位置</string>
    <string name="collector">采集器</string>
    <string name="install_time">安装时间</string>
    <string name="install_date">安装日期</string>
    <string name="pv_rate">PV功率</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="device">设备</string>
    <string name="expend">消耗</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="consume_detail">耗电量详情</string>
    <string name="office_air_conditioner">办公室空调</string>
    <string name="setting">设置</string>
    <string name="running">运行中</string>
    <string name="electricity">电流</string>
    <string name="click_login">点击登录</string>
    <string name="voltage">电压</string>
    <string name="collect_state">采集状态</string>
    <string name="online">在线</string>
    <string name="room_temperature">房间温度</string>
    <string name="set_temperature">设定温度</string>
    <string name="serial_num">序列号</string>
    <string name="area">区域</string>
    <string name="find_pwd">找回密码</string>
    <string name="find_pwd_by_phone">通过手机号找回</string>
    <string name="find_pwd_by_email">通过邮箱找回</string>
    <string name="confirm">确认</string>
    <string name="station_info_maintain">电站信息维护</string>
    <string name="install_info">安装信息</string>
    <string name="station_name">电站名称</string>
    <string name="design_firm">设计厂商</string>
    <string name="design_rate">设计功率</string>
    <string name="sys_rate">系统功率</string>
    <string name="running_capacity">运行容量</string>
    <string name="install_capacity">装机容量</string>
    <string name="geographic_info">地理信息</string>
    <string name="nation">国家</string>
    <string name="city">城市</string>
    <string name="time_zone">时区</string>
    <string name="longitude_and_latitude">经纬度</string>
    <string name="capital_gains">资金收益</string>
    <string name="subsidy_price">补贴单价</string>
    <string name="ord_price">平时电价</string>
    <string name="all_area">全部区域</string>
    <string name="price_conf">电价配置</string>
    <string name="edit_title">编辑项标题</string>
    <string name="edit_time">编辑时间</string>
    <string name="input_content">请输入编辑内容</string>
    <string name="modify_phone">修改手机号</string>
    <string name="old_phone">原手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_account">请输入账号</string>
    <string name="new_phone">新手机号</string>
    <string name="input_new_phone">请输入新手机号</string>
    <string name="verification_code">验证码</string>
    <string name="phone_verification_code">手机验证码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="modify_pwd">修改密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="bind">绑\t\t\t\t\t\t\t\t定</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="input_new_pwd_2">请再次输入新密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="notice">通知</string>
    <string name="personal_data">个人资料</string>
    <string name="logout">退出</string>
    <string name="login_1">登\t\t\t录</string>
    <string name="pacific_price">平时电价</string>
    <string name="confirm_">确定</string>
    <string name="cancel">取消</string>
    <string name="next_step">下一步</string>
    <string name="modify_head_img">点击更换头像</string>
    <string name="basic_info">基本信息</string>
    <string name="username">用户名</string>
    <string name="nickname">昵称</string>
    <string name="role_classify">角色类别</string>
    <string name="sys_manager">系统管理员</string>
    <string name="belong_company">所属公司</string>
    <string name="reg_date">注册日期</string>
    <string name="account_safety">账号安全</string>
    <string name="safety_phone">安全手机</string>
    <string name="safety_email">安全邮箱</string>
    <string name="report_detail">报表详情</string>
    <string name="eve_cons_daily">日平均耗电量</string>
    <string name="cons_max">耗电量最高</string>
    <string name="detail">明细</string>
    <string name="ele_consume">耗电量(kWh)</string>
    <string name="total_time">累计时间(h)</string>
    <string name="gu">谷</string>
    <string name="ping">平</string>
    <string name="feng">峰</string>
    <string name="version">当前版本</string>
    <string name="clear_cache">清除缓存</string>
    <string name="service_phone">客服电话</string>
    <string name="warn_detail">告警详情</string>
    <string name="device_sn">机器编号</string>
    <string name="device_name">机器名称</string>
    <string name="inverter">逆变器</string>
    <string name="error_code">故障码</string>
    <string name="evn_pro_contribute">环保贡献</string>
    <string name="carbon_dioxide_reduction">二氧化碳减排</string>
    <string name="save_coal">节约煤</string>
    <string name="one">棵</string>
    <string name="tree_planting">植树</string>
    <string name="tip">提示</string>
    <string name="tip_1">当前账号暂无设备，请添加</string>
    <string name="add_">添加</string>
    <string name="next_time">下次再说</string>
</resources>