<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/select_device_kind"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:text="@string/air_conditioner"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:text="@string/illumination"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:text="@string/charge_station"/>

</LinearLayout>
