<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#032d3a"
    android:layout_height="300dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/pop_cancel"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:background="@drawable/pick_view_cencal_bg"
            android:text="@string/cancel"
            android:textSize="15sp"
            android:textColor="#058ef0"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_time"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_margin="13dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pop_confirm"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/blue_bt_shape"
            android:gravity="center"
            android:text="@string/confirm_"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/time_tabs"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:tabTextColor="#058ef0"
        app:tabSelectedTextColor="@color/colorWhite">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second"/>
    </android.support.design.widget.TabLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33ffffff"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:divider="@null"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>
</LinearLayout>
