<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="15dp"
    android:gravity="center"
    android:background="@drawable/person_bg_pad"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pacific_price"
        android:drawableRight="@mipmap/more"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:layout_marginTop="14dp"
        android:textStyle="bold"
        android:drawableEnd="@mipmap/more" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/text_35"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_04"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/valid_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forever"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/is_valid"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/colorText_04" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_time"
            android:textColor="@color/colorText_04" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/valid_time"
            android:textColor="@color/colorText_04" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/take_effect"
            android:textColor="@color/colorText_04" />
    </LinearLayout>

</LinearLayout>