<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="7dp"
    android:background="@drawable/person_bg_pad"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/evn_pro_contribute"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout style="@style/GroupStyle_03">

            <ImageView
                style="@style/ImageStyle_02"
                android:src="@mipmap/env_ic_01" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle_04"
                    android:text="@string/text_18" />

                <TextView
                    style="@style/TextStyle_05"
                    android:text="@string/text_63" />
            </LinearLayout>

            <TextView
                style="@style/TextStyle_06"
                android:text="@string/carbon_dioxide_reduction" />
        </LinearLayout>

        <LinearLayout style="@style/GroupStyle_03">

            <ImageView
                style="@style/ImageStyle_02"
                android:src="@mipmap/env_ic_02" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle_04"
                    android:text="@string/text_18" />

                <TextView
                    style="@style/TextStyle_05"
                    android:text="@string/text_66" />
            </LinearLayout>

            <TextView
                style="@style/TextStyle_06"
                android:text="@string/save_coal" />
        </LinearLayout>

        <LinearLayout style="@style/GroupStyle_03">

            <ImageView
                style="@style/ImageStyle_02"
                android:src="@mipmap/env_ic_03" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle_04"
                    android:text="@string/text_18" />

                <TextView
                    style="@style/TextStyle_05"
                    android:text="@string/one" />
            </LinearLayout>

            <TextView
                style="@style/TextStyle_06"
                android:text="@string/tree_planting" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>