<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorTabBg"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tip"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_bg_06"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/no_device"
        android:layout_gravity="center"
        android:text="@string/tip_1"
        android:textColor="@color/colorBlue"
        android:layout_margin="40dp"/>

    <Button
        android:id="@+id/tip_add_bt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/login_bt_shape"
        android:text="@string/add_"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/maxText" />

    <TextView
        android:id="@+id/tip_next_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/next_time"
        android:layout_gravity="center"
        android:textColor="@color/colorWhite"
        android:paddingBottom="20dp"/>
</LinearLayout>